# remd

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLANS.md  PROGRESS.md  demo.py  main.py  output.txt  progress.md  pyproject.toml  pyrightconfig.json  pytest_debug.txt  test_output.txt  test_pydantic.py  test_results.txt
290/1.2.643.5.1.13.13.15.13-1.2.643.5.1.13.13.15.13.7/: Список изменений.docx
290/1.2.643.5.1.13.13.15.13-1.2.643.5.1.13.13.15.13.7/xml/: Протокол консультации.xml
290/1.2.643.5.1.13.13.15.13-1.2.643.5.1.13.13.15.13.7/xsd/XSD_ПРОТОКОЛ_КОНСУЛЬТАЦИИ_Р7/: CDA.xsd  COMPONENT_OF.xsd  DOCUMENTATION_OF.xsd  IN_FULFILLMENT_OF.xsd  LEGAL_AUTHENTICATOR.xsd  PARTICIPANT.xsd  RECORD_TARGET.xsd  STRUCTURED_BODY.xsd  address.xsd  fias.xsd  medService.xsd
docs/: 1.2.643.5.1.13.13.11.1520_12.85.csv
docs/semd/290/: guide.txt
docs/semd/290/1.2.643.5.1.13.13.15.13-1.2.643.5.1.13.13.15.13.7/: README.md
execplans/: coverage_semd290.md  pydantic-render-boundary-refactor.md  v290_r7_consultation.md  v290_r7_full_fields.md
execplans/completed/: v290_r7_full_fields.md
semd_engine/core/: cda_types.py  renderer.py  ui_metadata.py
semd_engine/core/templates/macros/: cda.xml.j2
semd_engine/core/templates/web/: demo.html
semd_engine/infrastructure/: interfaces.py
semd_engine/registry/v290_r7/: context.py  fetcher.py  schema.py
semd_engine/registry/v290_r7/templates/: main.xml.j2
tests/: conftest.py  test_pydantic_flow.py  test_v290_r7_generation.py  test_validation.py  test_web_interface.py
tests/semd290/: conftest.py  test_coverage.py  test_engine.py  test_validation.py
(+10 files in other folders)
