[project]
name = "remd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "lxml>=6.1.0",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP"]
ignore = ["N815"] # Ignore mixedCase for CDA standard compliance

[tool.pyright]
include = ["semd_engine", "demo.py"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
